@@ -43,7 +43,8 @@ Changes in 3.2rc1 :
 - Fix bug with moving files when source and destination are the same, but this is not clear due to symlinks
 - Make sure paste is disabled when editing the name of a torrent
 - Fix bug with wrong byteorder of PEX messages
-- Use KLocale::formatBytes so that KTorrent behaves the same as the rest of KDE when displaying sizes and speeds in bytes
+- Use KLocale::formatBytes so that KTorrent behaves the same as the rest of KDE when displaying sizes and speeds in bytesµ
+- Improve performance of downlod thread by using a socket to wake up the poll call, instead of a regular poll every second
 
 Changes in 3.2beta1 :
 - Ask to create directory in fileselectdlg, if it does not exist (163965)
